🐛 FIX: Transition lag on firefox / webkit

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -81,7 +81,8 @@
 				left: 0;
 				background-color: inherit;
 				border-radius: 50%;
-				transition: background-color 250ms ease-in-out;
+				transition: none;
+				-moz-transition: background-color 250ms ease-in-out;
 			}
 
 			&:nth-child(even) {
